test/inference/good/coreml_typeconstraint.mlt
let id = fun x -> (x : int)