test/inference/bad/coreml_typeconstraint.mlt
let id = fun (x : unit) -> (x : int)